# onejudge

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  gh-secrets.json  install.sh  justfile  llmlint.yml  pyproject.toml  release-plz.toml  rust-toolchain.toml
.claude/: settings.json
.github/workflows/: ci.yml  live-api.yml  live.yml  python-sdk-release-trigger.yml  release-binaries.yml  release-plz.yml  release-pypi.yml
crates/onejudge/: .python-sdk-release-trigger  CHANGELOG.md  Cargo.toml
crates/onejudge/examples/: generate_sdk_schema.rs
crates/onejudge/src/: api.rs  command.rs  engine.rs  error.rs  lib.rs  oneharness.rs  provider.rs  report.rs  sdk_schema.rs  skill.rs  split.rs  telemetry.rs  transcript.rs  usage.rs
crates/onejudge/src/cli/: config.rs  mod.rs  provider.rs  starter.yaml
crates/onejudge/tests/: AGENTS.md  cli.rs  contract.rs  e2e.rs  live.rs  live_api.rs
crates/onejudge/tests/golden/: report.example-v4.json  report.example-v5.json  report.schema-v1.json  report.schema-v2.json  report.schema-v3.json  report.schema-v4.json  report.schema-v5.json
docs/: cli.md  contract.md  live-api-tier.md  live-tier.md  protocol.md
python/onejudge-sdk/: LICENSE  README.md  pyproject.toml  requirements-dev.txt
python/onejudge-sdk/scripts/: generate.py  pack.py
python/onejudge-sdk/src/onejudge_sdk/: __init__.py  _client.py  _errors.py  _generated_types.py  _result.py  _version.py
python/onejudge-sdk/src/onejudge_sdk/_generated/: __init__.py  input-keys.json  schemas.json
python/onejudge-sdk/test/: fixture_cli.py  package_e2e.py  test_generate.py  test_sdk.py
scripts/: check-python-sdk-release-trigger.sh  check-release-targets.sh  lint-llm-diff.sh  python-sdk-release-trigger.sh  setup-llmlint.sh
