[workspace]
resolver = "2"
members = ["crates/onejudge"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/nickderobertis/onejudge"
authors = ["Nick DeRobertis"]
description = "A simulated interaction and evaluation loop over oneharness: drive a harness through a multi-turn conversation and score the transcript."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.dev]
# Faster incremental e2e: the suite spawns the test-double binaries many times,
# so a cheap debug build beats optimizing the doubles.
opt-level = 0
