[package]
name = "onejudge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
readme = "../../README.md"
keywords = ["llm", "agent", "evaluation", "oneharness", "judge"]
categories = ["development-tools::testing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Only pulled by the optional `ureq-transport` feature — the bundled HTTP glue for
# `ApiJudgeProvider`. The engine and the `ApiJudgeProvider` logic (request build /
# response parse) need no HTTP dependency; a consumer implements `HttpTransport`
# themselves or opts into this batteries-included transport.
ureq = { version = "3", optional = true }
# Only pulled by the optional `cli` feature — the `onejudge` binary. A library
# consumer (`cargo add onejudge`) never sees clap or a YAML parser. `serde_yaml`
# is archived/unmaintained, so the maintained `serde_yaml_ng` fork drives the
# config. Both are CLI-only, kept off the library's (and the MSRV's) surface.
clap = { version = "4", features = ["derive"], optional = true }
serde_yaml_ng = { version = "0.10", optional = true }

[dev-dependencies]
# The contract drift gate (`tests/contract.rs`) serializes the public `Report`
# and diffs it against a checked-in golden.
serde_json = { workspace = true }

[features]
# The deterministic test doubles the e2e suite drives as real subprocesses.
# Non-default so a published `cargo add onejudge` / library build ships only the
# engine — the doubles are test-only. `just check` and coverage enable it.
fake-provider = []

# The standalone `onejudge` binary: drive a harness through a simulated-user loop
# to complete one task, configured by YAML. Non-default so the library stays lean
# (clap + the YAML parser never reach a `cargo add onejudge` consumer). The
# deterministic gate (`just check`) enables it alongside `fake-provider` and drives
# the built binary against the test doubles in `tests/cli.rs`. The `api` provider
# kind additionally needs `ureq-transport` for its bundled HTTP client; without it
# that kind is a loud, actionable error, not a silent failure.
cli = ["dep:clap", "dep:serde_yaml_ng"]

# The bundled `UreqTransport` for `ApiJudgeProvider`: a blocking rustls HTTP client
# so a consumer can call Anthropic / OpenAI with no extra wiring. Off by default so
# the core crate (and `cargo deny`) carry no TLS stack; its transitive deps
# (ring/zeroize) need a newer Rust than the crate's MSRV, so it is deliberately
# outside the MSRV surface (see `just msrv`). The `HttpTransport` seam and the
# provider logic stay in the strict, deterministically-covered gate.
ureq-transport = ["dep:ureq"]

# The user-facing standalone binary, behind the `cli` feature. Unlike the two
# `fake-provider` doubles below, this one IS published and installed
# (`cargo install onejudge --features cli`, release archives). Its logic lives in
# the covered `cli` library modules; this entrypoint stays thin.
[[bin]]
name = "onejudge"
path = "src/bin/onejudge.rs"
required-features = ["cli"]

# `onejudge-echo-provider` speaks the CommandProvider JSON-lines protocol;
# `onejudge-fake-oneharness` emulates `oneharness run --format json`. Both are
# deterministic doubles for the e2e suite, gated behind `fake-provider` so they
# are never built into a normal library consumer's dependency graph.
[[bin]]
name = "onejudge-echo-provider"
path = "src/bin/echo_provider.rs"
required-features = ["fake-provider"]

[[bin]]
name = "onejudge-fake-oneharness"
path = "src/bin/fake_oneharness.rs"
required-features = ["fake-provider"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
